--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,15 +142,25 @@ div[class*='pieceColor--'] {
 }
 
 
+/* .case.selectedCase {
+    width: 74px;
+    height: 74px;
+    background-size: 85px;
+    background-position: -5.5px -5.5px;
+    background-color: rgb(73, 136, 81);
+    border: 3px solid rgb(54, 100, 60);
+    border-radius: 5px;
+}
 
-
-
-
-
-
-
-
-
+.case.possibleCase {
+    width: 74px;
+    height: 74px;
+    background-size: 85px;
+    background-position: -5.5px -5.5px;
+    background-color: rgb(136, 114, 73);
+    border: 3px solid rgb(95, 80, 51);
+    border-radius: 5px;
+} */
 
 
 
@@ -186,22 +196,6 @@ tr:nth-child(2n+1) {
     background-color: lightgrey;
 }
 
-.case.selectedCase {
-    width: 74px;
-    height: 74px;
-    background-size: 85px;
-    background-position: -5.5px -5.5px;
-    background-color: rgb(73, 136, 81);
-    border: 3px solid rgb(54, 100, 60);
-    border-radius: 5px;
-}
-
-.case.possibleCase {
-    width: 74px;
-    height: 74px;
-    background-size: 85px;
-    background-position: -5.5px -5.5px;
-    background-color: rgb(136, 114, 73);
-    border: 3px solid rgb(95, 80, 51);
-    border-radius: 5px;
+.emptyTD {
+    background-color: var(--fond);
 }
