Mise en place boutton reset, et des fonctions controllers reset+getData fonctionne

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,8 +3,8 @@
     --fond: #000000;
     --board-color-one: #c2c2c2;
     --board-color-two: #3b3b3b;
-    --pieces-white: #ffd700;
-    --pieces-black: #310404;
+    --pieces-white: #ececec;
+    --pieces-black: #ffd700;
     --pieces-border: #646464;
 }
 
